fixing critical issiues
